GNOME Bugzilla – Bug 738837
region leak
Last modified: 2014-10-20 10:19:16 UTC
during searching for mem leak in Gtk i discovered that leak found for Gtk 3.10 was not ported back to 2.24
Created attachment 288879 [details] [review] Fix leak memory allocated by gdk_region_rectangle in do_child_shapes function